--- a/.github/workflows/main_esociety.yml
+++ b/.github/workflows/main_esociety.yml
@@ -24,17 +24,17 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          CI=false npm run build  # Disable treating warnings as errors
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
+      - name: Build the app
+        run: |
+          npm run build
+      
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: release.zip
+          path: build/
 
   deploy:
     runs-on: ubuntu-latest
