--- a/.github/workflows/main_esociety.yml
+++ b/.github/workflows/main_esociety.yml
@@ -23,12 +23,12 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
+          npm install 
           CI=false npm run build  # Disable treating warnings as errors
 
       - name: Build the app
         run: |
-          npm run build
+          CI=false npm run build
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
